Bug 212623 - repair download after failed md5-check starts from scratch
Summary: repair download after failed md5-check starts from scratch
Status: RESOLVED FIXED
Alias: None
Product: kget
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KGet bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-01 15:20 UTC by Elmar Stellnberger (AT/K)
Modified: 2009-11-18 16:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elmar Stellnberger (AT/K) 2009-11-01 15:20:23 UTC
Version:           2.3.72 (using 4.3.72 (KDE 4.3.72 (KDE 4.4 >= 20091015)) "release 2", KDE:KDE4:UNSTABLE:Desktop / openSUSE_11.0)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.25.20-0.5-default

  After a failed md5-validation kget has asked me whether it should repair the failed download. However answering with 'yes' caused it to start the download from scratch rather than performing any repair attempts. The user should be informed about it if kget will have to start downloading from scratch.
Comment 1 Matthias Fuchs 2009-11-17 22:05:12 UTC
If a repair involves redownloading of the whole file or just semgents depends if there are partial checksums.

E.g. Metalinks can contain partial checksums, i.e. checksums for parts of the file. I understand that the situation you outlined above is not ideal and I'll look into it, though I'm not sure if I can fix that for 4.4 as the string freeze is relative close now.
Comment 2 Matthias Fuchs 2009-11-18 16:58:06 UTC
SVN commit 1051015 by mfuchs:

* In case of single-file-downloads reports wether a download is repairable or has to be redownloaded.
* Always uses English local to parse and save Metalink 3.0 dates

BUG:212623

 M  +11 -5     transfer-plugins/kio/transferKio.cpp  
 M  +3 -5      transfer-plugins/metalink/metalink.cpp  
 M  +11 -5     transfer-plugins/multisegmentkio/transfermultisegkio.cpp  
 M  +6 -8      ui/metalinkcreator/metalinker.cpp  
 M  +0 -3      ui/metalinkcreator/metalinker.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1051015