* In case of single-file-downloads reports wether a download is repairable or has to be redownloaded. * Always uses English local to parse and save Metalink 3.0 dates

BUG:212623

svn path=/trunk/KDE/kdenetwork/kget/; revision=1051015