transfer-plugins/kio/transferKio.cpp
@@ -271,11 +271,17 @@ void TransferKio::slotSpeed( KJob * kioJob, unsigned long bytes_per_second )
 
 void TransferKio::slotVerified(bool isVerified)
 {
-    if (!isVerified && KMessageBox::warningYesNo(0,
-                    i18n("The download (%1) could not be verfied. Do you want to repair it?", m_dest.fileName()),
-                    i18n("Verification failed.")) == KMessageBox::Yes)
-    {
-        repair();
+    if (!isVerified) {
+        QString text = i18n("The download (%1) could not be verfied. Do you want to repair it?", m_dest.fileName());
+
+        if (!verifier()->partialChunkLength()) {
+            text = i18n("The download (%1) could not be verfied. Do you want to redownload it?", m_dest.fileName());
+        }
+        if (KMessageBox::warningYesNo(0,
+                                      text,
+                                      i18n("Verification failed.")) == KMessageBox::Yes) {
+            repair();
+        }
     }
 }
 
